--- a/app/views/public/tasks/new.html.erb
+++ b/app/views/public/tasks/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mb-5">
   <h4 class="text-center">タグ作成</h4>
   <div class="row mb-5">
     <div class="col-md-4 offset-md-1">
@@ -49,23 +49,25 @@
 
 
   <h4 class="text-center">タスクの作成</h4>
-  <div class="row">
-    <div class="mx-auto">
-      <%= form_with model: @task, url: tasks_path, method: :post do |f| %>
-        <%= f.label :title, "タスクネーム" %><br>
-        <%= f.text_field :title %><br>
-        <%= f.label :content %><br>
-        <%= f.text_area :content %><br>
-        <%= f.hidden_field :assigned_person, :value => current_user.id %>
-        <%= f.label :start_time %>
-        <%= f.date_field :start_time %>
-        <%= f.label :end_time %>
-        <%= f.date_field :end_time %><br>
-        <%= f.select :tag_id, options_from_collection_for_select(current_user.tags.all, :id, :name) %><br>
-        <%= f.submit "保存する" %>
-      <% end %>
-    </div>
-  </div>
+    <%= form_with model: @task, url: tasks_path, method: :post do |f| %>
+      <div class="row">
+        <div class="col-4 mx-auto text-center">
+          <%= f.label :title, "タスクネーム" %><br>
+          <%= f.text_field :title, class: "form-control" %><br>
+          <%= f.label :content, "タスクの内容" %><br>
+          <%= f.text_area :content, class: "form-control", rows: "4" %><br>
+        </div>
+        <div class="col-4 mx-auto text-center">
+          <%= f.hidden_field :assigned_person, :value => current_user.id %>
+          <%= f.label :start_time, "タスク開始日" %><br>
+          <%= f.date_field :start_time, :value => Time.now.strftime("%Y-%m-%d"), class: "form-control" %><br>
+          <%= f.label :end_time, "タスク終了日" %><br>
+          <%= f.date_field :end_time, :value => Time.now.strftime("%Y-%m-%d"), class: "form-control" %><br>
+          <%= f.select :tag_id, options_from_collection_for_select(current_user.tags.all, :id, :name) %><br>
+          <%= f.submit 'タグ作成', class: "btn btn-outline-secondary mt-3 col-12" %>
+        </div>
+      </div>
+    <% end %>
 </div>
 
 <%= javascript_pack_tag 'task_create' %>
