--- a/app/views/public/group_tasks/new.html.erb
+++ b/app/views/public/group_tasks/new.html.erb
@@ -1,37 +1,79 @@
-<div class="container">
-  <% @tags.each do |tag| %>
-    <div class="<%= tag.color %> tag">
-      <%= tag.name %>
-      <%= link_to "削除", group_tag_path(tag.id), method: :delete, data: {confirm: "タグを削除するとタグが付いているタスクも削除されます。それでも削除しますか？"} %>
+<div class="container mb-5">
+  <h4 class="text-center">タグ作成</h4>
+  <div class="row mb-5">
+    <div class="col-md-4 offset-md-1">
+      <div class="mx-auto text-center">
+        <h4>タグ一覧</h4>
+        <% @tags.each do |tag| %>
+          <div style="background: linear-gradient(to right, <%= tag.color %>, #ffffff, <%= tag.color %>);" class="tag px-5 mb-1 round">
+            <%= tag.name %>
+            <%= link_to "削除", tag_path(tag.id), method: :delete, data: {confirm: "タグを削除するとタグが付いているタスクも削除されます。それでも削除しますか？"} %>
+          </div>
+        <% end %>
+      </div>
     </div>
-  <% end %>
-  <h1>グループのタグの作成</h1>
-  <%= form_with model: @tag, url: group_tags_path, method: :post do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    <%= f.hidden_field :group_id, :value => @tag.group_id %>
-    <%= f.select :color, [["赤色", "red"], ["青色", "blue"], ["黄色", "yellow"]] %>
-    <%= f.submit '追加' %>
-  <% end %>
 
-
-  <h1>グループのタスクの作成</h1>
-  <%= form_with model: @task, url: group_tasks_path, method: :post do |f| %>
-    <div class="form-group">
-      <%= f.label :title, "TITLE" %>
-      <%= f.text_field :title %>
+    <div class="col-md-5 offset-md-1">
+      <div class="mx-auto row text-center">
+        <div class="mx-auto">
+          <%= form_with model: @tag, url: group_tags_path, method: :post do |f| %>
+            <div class="col-10 mx-auto">
+              <%= f.label :name, "タグネーム" %>
+              <%= f.text_field :name, class: "form-control" %>
+            </div>
+            <%= f.label :color, "タグカラー選択", class: "mt-3" %>
+            <%= f.hidden_field :color, id: "color-name" %>
+            <div id="select-color" class="color-box mx-auto">
+              <div id="selected-color" class="s-color"></div>
+              <span><input id="#B2DB11" type="button" class="tag-color" style="background-color: #B2DB11;"></input></span>
+              <span><input id="#1B9850" type="button" class="tag-color" style="background-color: #1B9850;"></input></span>
+              <span><input id="#017E74" type="button" class="tag-color" style="background-color: #017E74;"></input></span>
+              <span><input id="#006881" type="button" class="tag-color" style="background-color: #006881;"></input></span>
+              <span><input id="#0C419A" type="button" class="tag-color" style="background-color: #0C419A;"></input></span>
+              <span><input id="#3D258E" type="button" class="tag-color" style="background-color: #3D258E;"></input></span>
+              <span><input id="#6B1687" type="button" class="tag-color" style="background-color: #6B1687;"></input></span>
+              <span><input id="#AE0158" type="button" class="tag-color" style="background-color: #AE0158;"></input></span>
+              <span><input id="#F80040" type="button" class="tag-color" style="background-color: #F80040;"></input></span>
+              <span><input id="#FF4000" type="button" class="tag-color" style="background-color: #FF4000;"></input></span>
+              <span><input id="#FF8C00" type="button" class="tag-color" style="background-color: #FF8C00;"></input></span>
+              <span><input id="#FFE500" type="button" class="tag-color" style="background-color: #FFE500;"></input></span>
+            </div>
+            <%= f.hidden_field :group_id, :value => @tag.group_id %>
+            <div class="col-10 mx-auto">
+              <%= f.submit 'タグ作成', class: "btn btn-outline-secondary mt-3 col-12" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
     </div>
-    <%= f.label :content %>
-    <%= f.text_area :content %><br>
-    <%= f.select :assigned_person, options_from_collection_for_select(@task.group.users.all, :id, :name)%><br>
-    <%= f.label :start_time %>
-    <%= f.date_field :start_time %>
-    <%= f.label :end_time %>
-    <%= f.date_field :end_time %><br>
-    <%= f.select :tag_id, options_from_collection_for_select(current_user.tags.all, :id, :name) %><br>
-    <%= f.hidden_field :group_id, :value => @task.group_id %>
-    <%= f.submit "保存する" %>
-  <% end %>
+  </div>
 
 
+  <h4 class="text-center">タスクの作成</h4>
+    <%= form_with model: @task, url: group_tasks_path, method: :post do |f| %>
+      <div class="row">
+        <div class="col-4 mx-auto text-center">
+          <%= f.label :title, "タスクネーム" %><br>
+          <%= f.text_field :title, class: "form-control" %><br>
+          <%= f.label :content, "タスクの内容" %><br>
+          <%= f.text_area :content, class: "form-control", rows: "4" %><br>
+        </div>
+        <div class="col-4 mx-auto text-center">
+          <%= f.hidden_field :assigned_person, :value => current_user.id %>
+          <%= f.label :start_time, "タスク開始日" %><br>
+          <%= f.date_field :start_time, :value => Time.now.strftime("%Y-%m-%d"), class: "form-control" %><br>
+          <%= f.label :end_time, "タスク終了日" %><br>
+          <%= f.date_field :end_time, :value => Time.now.strftime("%Y-%m-%d"), class: "form-control" %><br>
+          <%= f.label :assigned_person, "アサイン" %><br>
+          <%= f.select :assigned_person, options_from_collection_for_select(@task.group.users.all, :id, :name)%><br>
+          <%= f.label :tag_id, "タグ選択", class: "mt-3" %><br>
+          <%= f.select :tag_id, options_from_collection_for_select(current_user.tags.all, :id, :name) %><br>
+          <%= f.hidden_field :group_id, :value => @task.group_id %>
+          <%= f.submit 'タグ作成', class: "btn btn-outline-secondary mt-3 col-12" %>
+        </div>
+      </div>
+    <% end %>
 </div>
+
+<%= javascript_pack_tag 'task_create' %>
+
