--- a/app/javascript/stylesheets/calendar.css
+++ b/app/javascript/stylesheets/calendar.css
@@ -62,13 +62,15 @@
 /*  display: block;*/
 /*}*/
 
+
+
 .st-bg-table {
   /*position: absolute;*/
   /*top: 0;*/
   /*left: 0;*/
 /*  height: 100%;*/
 /*  width: 100%;*/
-  min-height: 200px;
+  height: 200px;
   table-layout: fixed;
 }
 
@@ -79,6 +81,12 @@ table {
   text-indent: initial;
   border-color: grey;
 }
+
+/*.date-number {*/
+/*  width: 100%;*/
+/*  max-height: 100%;*/
+/*  overflow-y: scroll;*/
+/*}*/
 
 .st-grid {
   position: absolute;
@@ -107,7 +115,8 @@ table {
 #today-box {
   width: 100%;
   height: 300px;
-  border: 1px solid black;
+  border: 1px solid #000000;
+  overflow-y: scroll;
 }
 
 .color-box {
