--- a/app/views/public/groups/new.html.erb
+++ b/app/views/public/groups/new.html.erb
@@ -1,10 +1,14 @@
 <div class="container">
-  <h4 class="mb-3">チーム作成画面</h4>
-  <%= form_with model: @group do |f| %>
-    <%= f.label :name, "グループ名" %>
-    <%= f.text_field :name %><br>
-    <%= f.label :password, "パスワード" %>
-    <%= f.text_field :password %><br>
-    <%= f.submit '作成' %>
-  <% end %>
+  <div class="row">
+    <div class="col-4 mx-auto text-center">
+      <h4 class="mb-3">グループ作成画面</h4>
+      <%= form_with model: @group do |f| %>
+        <%= f.label :name, "グループ名" %><br>
+        <%= f.text_field :name, class: "form-control" %><br>
+        <%= f.label :password, "パスワード" %><br>
+        <%= f.text_field :password, class: "form-control" %><br>
+        <%= f.submit '作成', class: "btn btn-outline-secondary" %>
+      <% end %>
+    </div>
+  </div>
 </div>
