--- a/app/views/public/group_tasks/new.html.erb
+++ b/app/views/public/group_tasks/new.html.erb
@@ -69,7 +69,7 @@
           <%= f.label :tag_id, "タグ選択", class: "mt-3" %><br>
           <%= f.select :tag_id, options_from_collection_for_select(current_user.tags.all, :id, :name) %><br>
           <%= f.hidden_field :group_id, :value => @task.group_id %>
-          <%= f.submit 'タグ作成', class: "btn btn-outline-secondary mt-3 col-12" %>
+          <%= f.submit 'タスク作成', class: "btn btn-outline-secondary mt-3 col-12" %>
         </div>
       </div>
     <% end %>
