--- a/app/views/public/tasks/edit.html.erb
+++ b/app/views/public/tasks/edit.html.erb
@@ -1,16 +1,26 @@
 <div class="container">
-  <h1>タスクの編集</h1>
-  <%= form_with model: @task do |f| %>
-    <%= f.label :title %>
-    <%= f.text_field :title %><br>
-    <%= f.label :content %>
-    <%= f.text_area :content %><br>
-    <%= f.hidden_field :assigned_person, :value => current_user.id %>
-    <%= f.label :start_time %>
-    <%= f.date_field :start_time %>
-    <%= f.label :end_time %>
-    <%= f.date_field :end_time %><br>
-    <%= f.select :tag_id, options_from_collection_for_select(current_user.tags.all, :id, :name) %><br>
-    <%= f.submit "変更する" %>
+  <h4 class="text-center">タスクの編集</h4>
+  <%= form_with model: @task, url: task_path, method: :patch do |f| %>
+    <div class="row">
+      <div class="col-4 mx-auto text-center">
+        <%= f.label :title, "タスクネーム" %><br>
+        <%= f.text_field :title, class: "form-control" %><br>
+        <%= f.label :content, "タスクの内容" %><br>
+        <%= f.text_area :content, class: "form-control", rows: "4" %><br>
+      </div>
+      <div class="col-4 mx-auto text-center">
+        <%= f.hidden_field :assigned_person, :value => current_user.id %>
+        <%= f.label :start_time, "タスク開始日" %><br>
+        <%= f.date_field :start_time, :value => Time.now.strftime("%Y-%m-%d"), class: "form-control" %><br>
+        <%= f.label :end_time, "タスク終了日" %><br>
+        <%= f.date_field :end_time, :value => Time.now.strftime("%Y-%m-%d"), class: "form-control" %><br>
+        <%= f.select :tag_id, options_from_collection_for_select(current_user.tags.all, :id, :name) %><br>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4 mx-auto">
+        <%= f.submit '編集を保存する', class: "btn btn-outline-secondary mt-3 col-12" %>
+      </div>
+    </div>
   <% end %>
 </div>
