--- a/app/views/public/tasks/new.html.erb
+++ b/app/views/public/tasks/new.html.erb
@@ -64,7 +64,7 @@
           <%= f.label :end_time, "タスク終了日" %><br>
           <%= f.date_field :end_time, :value => Time.now.strftime("%Y-%m-%d"), class: "form-control" %><br>
           <%= f.select :tag_id, options_from_collection_for_select(current_user.tags.all, :id, :name) %><br>
-          <%= f.submit 'タグ作成', class: "btn btn-outline-secondary mt-3 col-12" %>
+          <%= f.submit 'タスク作成', class: "btn btn-outline-secondary mt-3 col-12" %>
         </div>
       </div>
     <% end %>
