--- a/app/views/public/tasks/edit.html.erb
+++ b/app/views/public/tasks/edit.html.erb
@@ -17,9 +17,14 @@
         <%= f.select :tag_id, options_from_collection_for_select(current_user.tags.all, :id, :name) %><br>
       </div>
     </div>
-    <div class="row">
+    <div class="row mb-3">
       <div class="col-4 mx-auto">
         <%= f.submit '編集を保存する', class: "btn btn-outline-secondary mt-3 col-12" %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-2 mx-auto">
+        <%= link_to 'マイページに戻る', users_my_page_path, class: "btn btn-outline-secondary mt-3 col-12" %>
       </div>
     </div>
   <% end %>
