[Update] タグ作成ボタンのレイアウト

--- a/app/views/public/tasks/new.html.erb
+++ b/app/views/public/tasks/new.html.erb
@@ -5,9 +5,12 @@
       <div class="mx-auto text-center">
         <h4>タグ一覧</h4>
         <% @tags.each do |tag| %>
-          <div style="background: linear-gradient(to right, <%= tag.color %>, #ffffff, <%= tag.color %>);" class="tag px-5 mb-1 round">
-            <%= tag.name %>
-            <%= link_to "削除", tag_path(tag.id), method: :delete, data: {confirm: "タグを削除するとタグが付いているタスクも削除されます。それでも削除しますか？"} %>
+          <div class="row">
+            <div style="background: linear-gradient(to right, <%= tag.color %>, #ffffff, <%= tag.color %>);" class="tag px-5 mb-1 round col-7 mx-auto">
+              <%= tag.name %>
+            </div>
+            <%= link_to "編集", edit_tag_path(tag.id), class: "btn btn-outline-secondary btn-sm col-2 tag-btn mx-auto" %>
+            <%= link_to "削除", tag_path(tag.id), method: :delete, data: {confirm: "タグを削除するとタグが付いているタスクも削除されます。それでも削除しますか？"}, class: "btn btn-outline-secondary btn-sm col-2 tag-btn mx-auto" %>
           </div>
         <% end %>
       </div>
