--- a/app/views/public/group_tasks/new.html.erb
+++ b/app/views/public/group_tasks/new.html.erb
@@ -1,5 +1,8 @@
 <div class="container mb-5">
-  <h4 class="text-center">タグ作成</h4>
+  <div class="row mb-3">
+    <h4 class="text-center col-8 offset-2">タグ作成</h4>
+    <%= link_to '戻る', group_path(@tag.group_id), class: "btn btn-outline-secondary col-2" %>
+  </div>
   <div class="row mb-5">
     <div class="col-md-4 offset-md-1">
       <div class="mx-auto text-center">
@@ -52,7 +55,7 @@
   </div>
 
 
-  <h4 class="text-center">タスクの作成</h4>
+  <h4 class="text-center mb-3">タスクの作成</h4>
     <%= form_with model: @task, url: group_tasks_path, method: :post do |f| %>
       <div class="row">
         <div class="col-4 mx-auto text-center">
@@ -72,6 +75,10 @@
           <%= f.label :tag_id, "タグ選択", class: "mt-3" %><br>
           <%= f.select :tag_id, options_from_collection_for_select(current_user.tags.all, :id, :name) %><br>
           <%= f.hidden_field :group_id, :value => @task.group_id %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4 mx-auto">
           <%= f.submit 'タスク作成', class: "btn btn-outline-secondary mt-3 col-12" %>
         </div>
       </div>
