--- a/app/views/public/tasks/new.html.erb
+++ b/app/views/public/tasks/new.html.erb
@@ -1,5 +1,8 @@
 <div class="container mb-5">
-  <h4 class="text-center">タグ作成</h4>
+  <div class="row mb-3">
+    <h4 class="text-center col-8 offset-2">タグ作成</h4>
+    <%= link_to '戻る', users_my_page_path, class: "btn btn-outline-secondary col-2" %>
+  </div>
   <div class="row mb-5">
     <div class="col-md-4 offset-md-1">
       <div class="mx-auto text-center">
@@ -67,6 +70,10 @@
           <%= f.label :end_time, "タスク終了日" %><br>
           <%= f.date_field :end_time, :value => Time.now.strftime("%Y-%m-%d"), class: "form-control" %><br>
           <%= f.select :tag_id, options_from_collection_for_select(current_user.tags.all, :id, :name) %><br>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4 mx-auto">
           <%= f.submit 'タスク作成', class: "btn btn-outline-secondary mt-3 col-12" %>
         </div>
       </div>
