--- a/app/views/public/groups/chat.html.erb
+++ b/app/views/public/groups/chat.html.erb
@@ -1,29 +1,34 @@
 <div class="container">
+  <div class="row">
+    <div class="col-10 mx-auto">
+      <h4 class="text-center">チャットルーム</h4>
 
-  <h4 class="text-center">チャットルーム</h4>
-
-  <%= form_with model: @message, url: messages_path, method: :post do |f| %>
-    <%= f.label :message, "メッセージ" %>
-    <%= f.text_field :message %>
-    <%= f.hidden_field :user_id, :value => current_user.id %>
-    <%= f.hidden_field :group_id, :value => @group.id %>
-    <%= f.submit '送信する' %>
-  <% end %>
-
-  <% @messages.each do |message| %>
-    <% if message.user.id == current_user.id %>
-      <div class="text-right mt-3">
-        <%= message.user.name %>
-        <%= message.created_at %>
-        <%= message.message %>
+      <div class="chat-box my-3">
+        <% @messages.each do |message| %>
+          <% if message.user.id == current_user.id %>
+            <div class="text-right mt-3">
+              <%= message.user.name %>
+              <%= message.created_at.to_s(:datetime_jp) %><br>
+              <%= message.message %>
+            </div>
+          <% else %>
+            <div class="text-left mt-3">
+              <%= message.user.name %>
+              <%= message.created_at.to_s(:datetime_jp) %><br>
+              <%= message.message %>
+            </div>
+          <% end %>
+        <% end %>
       </div>
-    <% else %>
-      <div class="text-left mt-3">
-        <%= message.user.name %>
-        <%= message.created_at %>
-        <%= message.message %>
-      </div>
-    <% end %>
-  <% end %>
 
+      <%= form_with model: @message, url: messages_path, method: :post do |f| %>
+        <div class="row">
+          <%= f.text_field :message, class: "form-control col-6 offset-2" %>
+          <%= f.hidden_field :user_id, :value => current_user.id %>
+          <%= f.hidden_field :group_id, :value => @group.id %>
+          <%= f.submit '送信する', class: "form-control col-2" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </div>
