--- a/app/views/public/tasks/new.html.erb
+++ b/app/views/public/tasks/new.html.erb
@@ -9,11 +9,11 @@
         <h4>タグ一覧</h4>
         <% @tags.each do |tag| %>
           <div class="row">
-            <div style="background: linear-gradient(to right, <%= tag.color %>, #ffffff, <%= tag.color %>);" class="tag px-5 mb-1 round col-7 mx-auto">
+            <div style="background: linear-gradient(to right, <%= tag.color %>, #ffffff, <%= tag.color %>);" class="tag px-5 mb-1 round col-7 m-auto">
               <%= tag.name %>
             </div>
-            <%= link_to "編集", edit_tag_path(tag.id), class: "btn btn-outline-secondary btn-sm col-2 tag-btn mx-auto" %>
-            <%= link_to "削除", tag_path(tag.id), method: :delete, data: {confirm: "タグを削除するとタグが付いているタスクも削除されます。それでも削除しますか？"}, class: "btn btn-outline-secondary btn-sm col-2 tag-btn mx-auto" %>
+            <%= link_to "編集", edit_tag_path(tag.id), class: "btn btn-outline-secondary btn-sm col-2 mx-auto" %>
+            <%= link_to "削除", tag_path(tag.id), method: :delete, data: {confirm: "タグを削除するとタグが付いているタスクも削除されます。それでも削除しますか？"}, class: "btn btn-outline-secondary btn-sm col-2 mx-auto" %>
           </div>
         <% end %>
       </div>
