--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class="row">
+    
+  </div>
   <h4>ユーザー編集</h4>
 
   <%= form_with model: @user, url: users_information_path, method: :patch do |f| %>
