--- a/app/views/public/groups/show.html.erb
+++ b/app/views/public/groups/show.html.erb
@@ -1,9 +1,8 @@
-<div id="container" class="container">
-
-  <h4 class="text-center"><%= @group.name %></h4>
+<div id="container" class="container mb-5">
 
   <div class="row my-2 mx-0">
-    <%= link_to "チャットへ", group_chat_path(@group.id), class: "col-2 offset-1 btn btn-outline-secondary px-0" %>
+    <h4 class="text-left col-8 offset-1 mb-0 p-0"><%= @group.name %></h4>
+    <%= link_to "チャットへ", group_chat_path(@group.id), class: "col-2 btn btn-outline-secondary px-0" %>
 
     <%# if @group.owner_id == current_user %>
       <% if @other_users.present? %>
@@ -27,7 +26,8 @@
     </div>
   </div>
 
-  <%= link_to "新規作成",new_group_task_path(group_id: @group.id) %>
+  <%= link_to "新規作成",new_group_task_path(group_id: @group.id), class: "btn btn-outline-secondary my-3 col-10 offset-1" %>
+
   <div class="button-container-calendar row mb-3 day-box">
     <div class="col-1 p-0">
       <input type="button" value="<" id="previous" class="text-center btn btn-outline-dark allow">
