--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row">
-    
+
   </div>
   <h4>ユーザー編集</h4>
 
   <%= form_with model: @user, url: users_information_path, method: :patch do |f| %>
-    <%= f.label :name %>
+    <%= f.label :name, "ユーザーネーム" %>
     <%= f.text_field :name, autofocus: true %><br>
     <%= f.submit "変更を保存する" %>
   <% end %>
