--- a/app/views/public/tasks/new.html.erb
+++ b/app/views/public/tasks/new.html.erb
@@ -52,17 +52,17 @@
       </div>
     </div>
   </div>
-  <div class="row" id="<%= @task.id %>-task-new">
-    <div class="col-6 mx-auto text-center">
-      <% if @task.errors.any? %>
-        <%= @task.errors.count %>件のエラーが発生しました
-        <ul>
+  <div class="row" id="task-create-errors">
+    <% if @task.errors.any? %>
+      <div class="col-6 mx-auto my-3 px-0 border border-danger">
+        <h5 class="border-bottom border-danger py-2 text-center"><%= @task.errors.count %>件のエラーが発生しました</h5>
+        <ul class="px-5 mb-2">
           <% @task.errors.full_messages.each do |message| %>
             <li><%= message %></li>
           <% end %>
         </ul>
-      <% end %>
-    </div>
+      </div>
+    <% end %>
   </div>
 
   <h4 class="text-center">タスクの作成</h4>
