--- a/app/views/public/group_tasks/new.html.erb
+++ b/app/views/public/group_tasks/new.html.erb
@@ -1,4 +1,17 @@
 <div class="container mb-5">
+  <div class="row">
+    <% if @tag.errors.any? %>
+      <div class="col-6 mx-auto my-3 px-0 border border-danger">
+        <h5 class="border-bottom border-danger py-2 text-center"><%= @tag.errors.count %>件のエラーが発生しました</h5>
+        <ul class="px-5 mb-2">
+          <% @tag.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+  </div>
+
   <div class="row mb-3">
     <h4 class="text-center col-8 offset-2">タグ作成</h4>
     <%= link_to '戻る', group_path(@tag.group_id), class: "btn btn-outline-secondary col-2" %>
@@ -52,6 +65,19 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <div class="row" id="group-task-new">
+    <% if @task.errors.any? %>
+      <div class="col-6 mx-auto my-3 px-0 border border-danger">
+        <h5 class="border-bottom border-danger py-2 text-center"><%= @task.errors.count %>件のエラーが発生しました</h5>
+        <ul class="px-5 mb-2">
+          <% @task.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
   </div>
 
 
