--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <header class="shadow mb-5">
+    <header class="shadow mb-5" <% if user_signed_in? %>style="background-color: <%= current_user.color %>;"<% end %>>
       <%= render "layouts/header" %>
     </header>
     <%= yield %>
