--- a/app/views/public/users/out_check.html.erb
+++ b/app/views/public/users/out_check.html.erb
@@ -1,10 +1,13 @@
-<div class="container">
-  <h4>退会確認画面</h4>
-  退会をクリックすると退会することになります<br>
-  <%= link_to "戻る", users_my_page_path %>
+<div class="container text-center">
+  <h4 class="mb-5">退会確認画面</h4>
+  <p>退会すると、会員登録情報や</p>
+  <p>これまでのタスクやカレンダーが閲覧できなくなります。</p>
+  <p>退会する場合は、「退会する」をクリックしてください。</p>
 
   <%= form_with model: @user, url: users_out_path, method: :patch do |f| %>
     <%= f.hidden_field :status, :value => "true" %>
-    <%= f.submit "退会する" %>
+    <%= f.submit "退会する", class: "btn btn-outline-secondary mt-3 col-2" %>
   <% end %>
+
+  <%= link_to "戻る", users_my_page_path, class: "col-2 btn btn-outline-secondary mt-3" %>
 </div>
