--- a/app/views/public/tasks/new.html.erb
+++ b/app/views/public/tasks/new.html.erb
@@ -22,7 +22,7 @@
         <h4>タグ一覧</h4>
         <% @tags.each do |tag| %>
           <div class="row">
-            <div style="background: linear-gradient(to right, <%= tag.color %>, #ffffff, <%= tag.color %>);" class="tag px-5 mb-1 round col-7 m-auto">
+            <div style="background: <%= tag.color %>;" class="tag px-5 mb-1 round col-7 m-auto">
               <%= tag.name %>
             </div>
             <%= link_to "編集", edit_tag_path(tag.id), class: "btn btn-outline-secondary btn-sm col-2 mx-auto" %>
@@ -44,18 +44,18 @@
             <%= f.hidden_field :color, id: "color-name" %>
             <div id="select-color" class="color-box mx-auto">
               <div id="selected-color" class="s-color"></div>
-              <span><input id="#B2DB11" type="button" class="tag-color" style="background-color: #B2DB11;"></input></span>
-              <span><input id="#1B9850" type="button" class="tag-color" style="background-color: #1B9850;"></input></span>
-              <span><input id="#017E74" type="button" class="tag-color" style="background-color: #017E74;"></input></span>
-              <span><input id="#006881" type="button" class="tag-color" style="background-color: #006881;"></input></span>
-              <span><input id="#0C419A" type="button" class="tag-color" style="background-color: #0C419A;"></input></span>
-              <span><input id="#3D258E" type="button" class="tag-color" style="background-color: #3D258E;"></input></span>
-              <span><input id="#6B1687" type="button" class="tag-color" style="background-color: #6B1687;"></input></span>
-              <span><input id="#AE0158" type="button" class="tag-color" style="background-color: #AE0158;"></input></span>
-              <span><input id="#F80040" type="button" class="tag-color" style="background-color: #F80040;"></input></span>
-              <span><input id="#FF4000" type="button" class="tag-color" style="background-color: #FF4000;"></input></span>
-              <span><input id="#FF8C00" type="button" class="tag-color" style="background-color: #FF8C00;"></input></span>
-              <span><input id="#FFE500" type="button" class="tag-color" style="background-color: #FFE500;"></input></span>
+              <span><input id="#EDD267" type="button" class="tag-color" style="background-color: #EDD267;"></input></span>
+              <span><input id="#CACA61" type="button" class="tag-color" style="background-color: #CACA61;"></input></span>
+              <span><input id="#73C89C" type="button" class="tag-color" style="background-color: #73C89C;"></input></span>
+              <span><input id="#3FABA4" type="button" class="tag-color" style="background-color: #3FABA4;"></input></span>
+              <span><input id="#52A6BF" type="button" class="tag-color" style="background-color: #52A6BF;"></input></span>
+              <span><input id="#6591C0" type="button" class="tag-color" style="background-color: #6591C0;"></input></span>
+              <span><input id="#8E87BE" type="button" class="tag-color" style="background-color: #8E87BE;"></input></span>
+              <span><input id="#AC7EAE" type="button" class="tag-color" style="background-color: #AC7EAE;"></input></span>
+              <span><input id="#D98295" type="button" class="tag-color" style="background-color: #D98295;"></input></span>
+              <span><input id="#F28C8E" type="button" class="tag-color" style="background-color: #F28C8E;"></input></span>
+              <span><input id="#FF9E7D" type="button" class="tag-color" style="background-color: #FF9E7D;"></input></span>
+              <span><input id="#FCB869" type="button" class="tag-color" style="background-color: #FCB869;"></input></span>
             </div>
             <div class="col-10 mx-auto">
               <%= f.submit 'タグ作成', class: "btn btn-outline-secondary mt-3 col-12" %>
