[Update] flashメッセージの修正

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -9,5 +9,23 @@ body {
   width: 100%;
   top: 115px;
   left: 0;
+}
+
+.flash {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+#notice {
   background-color: #a6ce39;
+}
+
+#alert {
+  background-color: #f9e900;
+}
+
+#confirm, #danger {
+  background-color: #ff6666;
 }
