--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,11 @@
     <header class="shadow mb-5" <% if user_signed_in? %>style="background-color: <%= current_user.color %>;"<% end %>>
       <%= render "layouts/header" %>
     </header>
-    <div class="flash-message text-center" id="flash">
-      <%= notice %>
+    <div class="flash-message text-center">
+      <p id="notice" class="flash"><%= notice %></p>
+      <p id="alert" class="flash"><%= alert %></p>
+      <p id="confirm" class="flash"><%= flash[:confirm] %></p>
+      <p id="danger" class="flash"><%= flash[:danger] %></p>
     </div>
     <%= yield %>
   </body>
