--- a/app/views/public/groups/show.html.erb
+++ b/app/views/public/groups/show.html.erb
@@ -89,7 +89,14 @@
   <% task = [] %>
 <% end %>
 
+<% user_color = current_user.color %>
+
 <div id="tasks" data-task-status="<%= tasks.to_json %>"></div>
+<div id="user_color" data-user-status="<%= user_color.to_json %>"></div>
 
 <%= javascript_pack_tag 'today_group_task' %>
-<%= javascript_pack_tag 'calendar' %>
+<% if current_user.calendar_status %>
+  <%= javascript_pack_tag 'first_sun_calendar' %>
+<% else %>
+  <%= javascript_pack_tag 'first_mon_calendar' %>
+<% end %>
