--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -33,6 +33,28 @@
         <span><input id="#FCB869" type="button" class="tag-color" style="background-color: #FCB869;"></input></span>
       </div>
     </div>
+
+    <%= f.label :calendar_status, "カレンダーの設定", class: "mt-3" %>
+
+    <div class="row">
+      <div class="col-5 mx-auto row btn-group btn-group-toggle" data-toggle="buttons">
+        <% if @user.calendar_status %>
+          <label class="btn btn-outline-secondary active col" style="width:50%">
+            <%= f.radio_button :calendar_status, true %>日曜始まり
+          </label>
+          <label class="btn btn-outline-secondary col" style="width:50%">
+            <%= f.radio_button :calendar_status, false %>月曜始まり
+          </label>
+        <% else %>
+          <label class="btn btn-outline-secondary col" style="width:50%">
+            <%= f.radio_button :calendar_status, true %>日曜始まり
+          </label>
+          <label class="btn btn-outline-secondary active col" style="width:50%">
+            <%= f.radio_button :calendar_status, false %>月曜始まり
+          </label>
+        <% end %>
+      </div>
+    </div>
     <%= f.submit "変更を保存する", class: "btn btn-outline-secondary my-3" %>
   <% end %>
 
