[Update] トップページ

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,1 +1,11 @@
-<h1>Topページ</h1>
+<div class="container top">
+  <%= image_tag 'calendar.png', class: "top-image mx-auto" %>
+  <div class="green"></div>
+  <div class="red"></div>
+  <div class="blue"></div>
+</div>
+
+<div class="title">
+  <h1 class="text-center">Canvas</h1>
+  <h3 class="text-center">~あなたの未来をあなたの色に~</h3>
+</div>
