--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -29,3 +29,59 @@ body {
 #confirm, #danger {
   background-color: #ff6666;
 }
+
+.top {
+  position: relative;
+}
+
+.red {
+  position: absolute;
+  top: 200px;
+  left: 300px;
+  width: 200px;
+  height: 200px;
+  background-color: #F28C8E;
+  border-radius: 38% 62% 30% 70% / 50% 72% 28% 50% ;
+}
+
+.green {
+  position: absolute;
+  top: 230px;
+  right: 450px;
+  width: 200px;
+  height: 200px;
+  background-color: #EDD267;
+  border-radius: 100% 0% 100% 0% / 63% 37% 63% 37% ;
+  transform: rotate(30deg);
+}
+
+.blue {
+  position: absolute;
+  top: 150px;
+  right: 350px;
+  width: 100px;
+  height: 250px;
+  background-color: #6591C0;
+}
+
+.top-image {
+  position: absolute;
+  top: -34px;
+  width: 100%;
+  height: 680px;
+}
+
+.title {
+  position: absolute;
+  width: 100%;
+  margin-top: 200px;
+  z-index: 5;
+}
+
+.title h1 {
+  font-size: 50px;
+}
+
+.title h2 {
+  font-size: 35px;
+}
