--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
             <%= link_to "グループ", groups_path, class: 'nav-link text-dark' %>
           </li>
           <li class="nav-item ml-3">
-            <%= link_to "カスタム", users_information_edit_path, class: 'nav-link text-dark' %>
+            <%= link_to "設定", users_information_edit_path, class: 'nav-link text-dark' %>
           </li>
           <li class="nav-item ml-3">
             <%= link_to "通知", notifications_path, class: 'nav-link text-dark' %>
@@ -23,9 +23,6 @@
             <%= link_to "ログアウト", destroy_user_session_path, class: 'nav-link text-dark' %>
           </li>
         <% else %>
-          <li class="nav-item ml-3">
-            <%= link_to "アバウト", about_path, class: 'nav-link text-dark' %>
-          </li>
           <li class="nav-item ml-3">
             <%= link_to "新規登録", new_user_registration_path, class: 'nav-link text-dark' %>
           </li>
