--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -78,9 +78,12 @@
 <div id="user_color" data-user-status="<%= user_color.to_json %>"></div>
 
 <%= javascript_pack_tag 'today_task' %>
+
 <% if current_user.calendar_status %>
   <%= javascript_pack_tag 'first_sun_calendar' %>
 <% else %>
   <%= javascript_pack_tag 'first_mon_calendar' %>
 <% end %>
+
+<%#= javascript_pack_tag 'test_calendar' %>
 
