--- a/app/views/public/groups/show.html.erb
+++ b/app/views/public/groups/show.html.erb
@@ -3,17 +3,16 @@
   <div class="row my-2 mx-0">
     <h4 class="text-left col-8 offset-1 mb-0 p-0"><%= @group.name %></h4>
     <%= link_to "チャットへ", group_chat_path(@group.id), class: "col-2 btn btn-outline-secondary px-0" %>
-
-    <%# if @group.owner_id == current_user %>
-      <% if @other_users.present? %>
-        <%= form_with model: @user, url: invitation_group_path(@group), method: :post, local: true do |f| %>
-          <%= f.collection_select :user_id, @other_users, :id, :name, class: "col" %>
-          <%= f.submit "招待する" %>
-        <% end %>
-      <% end %>
-
-    <%# end %>
   </div>
+
+
+    <% if @other_users.present? %>
+      <%= form_with model: @user, url: invitation_group_path(@group), class: "row px-3", method: :post, local: true do |f| %>
+        <%= f.collection_select :user_id, @other_users, :id, :name, {include_blank: "選択"}, { class: "col-6 offset-1 text-center"} %>
+        <%= f.submit "招待する", class: "btn btn-outline-secondary btn-sm col-4" %>
+      <% end %>
+    <% end %>
+
 
 
   <div class="button-container-calendar row day-box">
