--- a/app/views/public/group_tasks/edit.html.erb
+++ b/app/views/public/group_tasks/edit.html.erb
@@ -11,13 +11,13 @@
       <div class="col-4 mx-auto text-center">
         <%= f.hidden_field :assigned_person, :value => current_user.id %>
         <%= f.label :start_time, "タスク開始日" %><br>
-        <%= f.date_field :start_time, :value => Time.now.strftime("%Y-%m-%d"), class: "form-control" %><br>
+        <%= f.date_field :start_time, :value => @group_task.start_time, class: "form-control" %><br>
         <%= f.label :end_time, "タスク終了日" %><br>
-        <%= f.date_field :end_time, :value => Time.now.strftime("%Y-%m-%d"), class: "form-control" %><br>
+        <%= f.date_field :end_time, :value => @group_task.end_time, class: "form-control" %><br>
         <%= f.label :assigned_person, "アサイン" %><br>
         <%= f.select :assigned_person, options_from_collection_for_select(@group_task.group.users.all, :id, :name)%><br>
         <%= f.label :tag_id, "タグ選択", class: "mt-3" %><br>
-        <%= f.select :tag_id, options_from_collection_for_select(current_user.tags.all, :id, :name) %><br>
+        <%= f.select :tag_id, options_from_collection_for_select(@group.tags.all, :id, :name) %><br>
         <%= f.hidden_field :group_id, :value => @group_task.group_id %>
       </div>
     </div>
