--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,10 @@
       <%= render "layouts/header" %>
     </header>
     <div class="flash-message text-center">
-      <p id="notice" class="flash"><%= notice %></p>
-      <p id="alert" class="flash"><%= alert %></p>
-      <p id="confirm" class="flash"><%= flash[:confirm] %></p>
-      <p id="danger" class="flash"><%= flash[:danger] %></p>
+      <p id="notice"><%= notice %></p>
+      <p id="alert"><%= alert %></p>
+      <p id="confirm"><%= flash[:confirm] %></p>
+      <p id="danger"><%= flash[:danger] %></p>
     </div>
     <%= yield %>
   </body>
