--- a/app/views/public/tasks/edit.html.erb
+++ b/app/views/public/tasks/edit.html.erb
@@ -22,6 +22,11 @@
         <%= f.submit '編集を保存する', class: "btn btn-outline-secondary mt-3 col-12" %>
       </div>
     </div>
+    <div class="row mb-3">
+      <div class="col-4 mx-auto">
+        <%= link_to 'タスクを削除する', task_path(@task), method: :delete, class: "btn btn-outline-secondary mt-3 col-12" %>
+      </div>
+    </div>
     <div class="row">
       <div class="col-2 mx-auto">
         <%= link_to 'マイページに戻る', users_my_page_path, class: "btn btn-outline-secondary mt-3 col-12" %>
