--- a/app/views/public/group_tasks/new.html.erb
+++ b/app/views/public/group_tasks/new.html.erb
@@ -83,7 +83,7 @@
 
   <h4 class="text-center mb-3">タスクの作成</h4>
     <%= form_with model: @task, url: group_tasks_path, method: :post do |f| %>
-      <div class="row">
+      <div class="row mb-3">
         <div class="col-4 mx-auto text-center">
           <%= f.label :title, "タスクネーム" %><br>
           <%= f.text_field :title, class: "form-control" %><br>
@@ -97,9 +97,9 @@
           <%= f.label :end_time, "タスク終了日" %><br>
           <%= f.date_field :end_time, :value => Time.now.strftime("%Y-%m-%d"), class: "form-control" %><br>
           <%= f.label :assigned_person, "アサイン" %><br>
-          <%= f.select :assigned_person, options_from_collection_for_select(@task.group.users.all, :id, :name)%><br>
+          <%= f.select :assigned_person, options_from_collection_for_select(@task.group.users.all, :id, :name), {include_blank: "選択"}, { class: "col-12 text-center"} %><br>
           <%= f.label :tag_id, "タグ選択", class: "mt-3" %><br>
-          <%= f.select :tag_id, options_from_collection_for_select(@group.tags.all, :id, :name) %><br>
+          <%= f.select :tag_id, options_from_collection_for_select(@group.tags.all, :id, :name), {include_blank: "選択"}, { class: "col-12 text-center"} %><br>
           <%= f.hidden_field :group_id, :value => @task.group_id %>
         </div>
       </div>
